--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Snake</title>
 </head>
 <body>
-    
+    <div id="canvas-container"></div>
 </body>
 <script src="script.js"></script>
 </html>
