--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Simple Snake</title>
 </head>
 <body>
+    <div class="container">
+    <div class="info-bar"><div class="counter">0</div><div class="restart">Restart</div></div>
     <div id="canvas-container"></div>
+    <p><em>Use <b>arrow keys</b> to move</em> </p> 
+    </div>
+    
 </body>
 <script src="script.js"></script>
 </html>
