--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <div class="container">
     <div class="info-bar"><div class="counter">0</div><div class="restart">Restart</div></div>
     <div id="canvas-container"></div>
-    <p><em>Use <b>arrow keys</b> to move</em> </p> 
+    <p class="ms-description"><em>Use <b>arrow keys</b> to move</em> </p>
+    <div class="pad">
+        <div class="up"></div>
+        <div class="right"></div>
+        <div class="down"></div>
+        <div class="left"></div>
+    </div>
     </div>
     
 </body>
