--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     </div>
     
 </body>
-<script type="module" src="./index.ts"></script>
+<script type="module" src="./src/index.ts"></script>
+<script>console.log("Hi guys! Have a good time!😀")</script>
 </html>
